vbnc/vbnc/tests/Errors/30105.vb
Module Main

		Sub Foo
	
		Dim mdarr(,) As String
		Dim var As String = mdarr(0)
		
	End Sub
	
End Module